update hadoop config