@@ -196,3 +196,12 @@
 # Directory containing service examples
 # export YARN_SERVICE_EXAMPLES_DIR = $HADOOP_YARN_HOME/share/hadoop/yarn/yarn-service-examples
 # export YARN_CONTAINER_RUNTIME_DOCKER_RUN_OVERRIDE_DISABLE=true
+
+export YARN_OPTS="$YARN_OPTS --add-opens=java.base/java.lang=ALL-UNNAMED \
+                             --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
+                             --add-opens=java.base/java.io=ALL-UNNAMED \
+                             --add-opens=java.base/java.net=ALL-UNNAMED \
+                             --add-opens=java.base/java.util=ALL-UNNAMED"
+# 或更细粒度：
+export YARN_RESOURCEMANAGER_OPTS="$YARN_RESOURCEMANAGER_OPTS ${OPEN_OPTS}"
+export YARN_NODEMANAGER_OPTS="$YARN_NODEMANAGER_OPTS ${OPEN_OPTS}"
